--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
   }
